// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AssetOverview should render correctly 1`] = `
<View
  style={
    {
      "paddingTop": 20,
    }
  }
  testID="token-asset-overview"
>
  <View>
    <View
      style={
        {
          "paddingHorizontal": 16,
        }
      }
    >
      <Text
        accessibilityRole="text"
        style={
          {
            "color": "#686e7d",
            "fontFamily": "Geist Medium",
            "fontSize": 16,
            "letterSpacing": 0,
            "lineHeight": 24,
          }
        }
      >
        Ethereum
         (
        ETH
        )
      </Text>
      <Text
        accessibilityRole="text"
        style={
          {
            "color": "#121314",
            "fontFamily": "Geist Bold",
            "fontSize": 24,
            "letterSpacing": 0,
            "lineHeight": 32,
          }
        }
        testID="token-price"
      >
        <View
          style={
            {
              "paddingTop": 8,
            }
          }
        >
          <View
            onLayout={[Function]}
          >
            <View
              style={
                {
                  "position": "relative",
                }
              }
            >
              <View
                style={
                  [
                    {
                      "borderRadius": 6,
                      "height": 32,
                      "width": 100,
                    },
                    {
                      "backgroundColor": "#f3f5f9",
                      "overflow": "hidden",
                    },
                  ]
                }
              />
            </View>
          </View>
        </View>
      </Text>
      <Text
        accessibilityRole="text"
        style={
          {
            "color": "#121314",
            "fontFamily": "Geist Regular",
            "fontSize": 16,
            "letterSpacing": 0,
            "lineHeight": 24,
          }
        }
      >
        <View
          style={
            {
              "paddingTop": 2,
            }
          }
          testID="loading-price-diff"
        >
          <View
            onLayout={[Function]}
          >
            <View
              style={
                {
                  "position": "relative",
                }
              }
            >
              <View
                style={
                  [
                    {
                      "borderRadius": 6,
                      "height": 18,
                      "width": 150,
                    },
                    {
                      "backgroundColor": "#f3f5f9",
                      "overflow": "hidden",
                    },
                  ]
                }
              />
            </View>
          </View>
        </View>
      </Text>
    </View>
    <View
      style={
        {
          "paddingHorizontal": 16,
          "paddingTop": 10,
          "width": 750,
        }
      }
    >
      <View
        onLayout={[Function]}
      >
        <View
          style={
            {
              "position": "relative",
            }
          }
        >
          <View
            style={
              [
                {
                  "borderRadius": 6,
                  "height": 586.96,
                  "width": 718,
                },
                {
                  "backgroundColor": "#f3f5f9",
                  "overflow": "hidden",
                },
              ]
            }
          />
        </View>
      </View>
    </View>
    <View
      style={
        {
          "display": "flex",
          "flexDirection": "row",
          "justifyContent": "space-around",
          "paddingHorizontal": 10,
          "paddingTop": 20,
        }
      }
    >
      <TouchableOpacity
        onPress={[Function]}
        style={
          {
            "alignItems": "center",
            "backgroundColor": "#858b9a29",
            "borderRadius": 40,
            "justifyContent": "center",
            "paddingHorizontal": 8,
            "paddingLeft": 10,
            "paddingVertical": 2,
          }
        }
      >
        <Text
          accessibilityRole="text"
          style={
            {
              "color": "#121314",
              "fontFamily": "Geist Regular",
              "fontSize": 14,
              "letterSpacing": 3,
              "lineHeight": 22,
              "textAlign": "center",
            }
          }
        >
          1D
        </Text>
      </TouchableOpacity>
      <TouchableOpacity
        onPress={[Function]}
        style={
          {
            "alignItems": "center",
            "backgroundColor": "#ffffff",
            "borderRadius": 40,
            "justifyContent": "center",
            "paddingHorizontal": 8,
            "paddingLeft": 10,
            "paddingVertical": 2,
          }
        }
      >
        <Text
          accessibilityRole="text"
          style={
            {
              "color": "#686e7d",
              "fontFamily": "Geist Regular",
              "fontSize": 14,
              "letterSpacing": 3,
              "lineHeight": 22,
              "textAlign": "center",
            }
          }
        >
          1W
        </Text>
      </TouchableOpacity>
      <TouchableOpacity
        onPress={[Function]}
        style={
          {
            "alignItems": "center",
            "backgroundColor": "#ffffff",
            "borderRadius": 40,
            "justifyContent": "center",
            "paddingHorizontal": 8,
            "paddingLeft": 10,
            "paddingVertical": 2,
          }
        }
      >
        <Text
          accessibilityRole="text"
          style={
            {
              "color": "#686e7d",
              "fontFamily": "Geist Regular",
              "fontSize": 14,
              "letterSpacing": 3,
              "lineHeight": 22,
              "textAlign": "center",
            }
          }
        >
          1M
        </Text>
      </TouchableOpacity>
      <TouchableOpacity
        onPress={[Function]}
        style={
          {
            "alignItems": "center",
            "backgroundColor": "#ffffff",
            "borderRadius": 40,
            "justifyContent": "center",
            "paddingHorizontal": 8,
            "paddingLeft": 10,
            "paddingVertical": 2,
          }
        }
      >
        <Text
          accessibilityRole="text"
          style={
            {
              "color": "#686e7d",
              "fontFamily": "Geist Regular",
              "fontSize": 14,
              "letterSpacing": 3,
              "lineHeight": 22,
              "textAlign": "center",
            }
          }
        >
          3M
        </Text>
      </TouchableOpacity>
      <TouchableOpacity
        onPress={[Function]}
        style={
          {
            "alignItems": "center",
            "backgroundColor": "#ffffff",
            "borderRadius": 40,
            "justifyContent": "center",
            "paddingHorizontal": 8,
            "paddingLeft": 10,
            "paddingVertical": 2,
          }
        }
      >
        <Text
          accessibilityRole="text"
          style={
            {
              "color": "#686e7d",
              "fontFamily": "Geist Regular",
              "fontSize": 14,
              "letterSpacing": 3,
              "lineHeight": 22,
              "textAlign": "center",
            }
          }
        >
          1Y
        </Text>
      </TouchableOpacity>
      <TouchableOpacity
        onPress={[Function]}
        style={
          {
            "alignItems": "center",
            "backgroundColor": "#ffffff",
            "borderRadius": 40,
            "justifyContent": "center",
            "paddingHorizontal": 8,
            "paddingLeft": 10,
            "paddingVertical": 2,
          }
        }
      >
        <Text
          accessibilityRole="text"
          style={
            {
              "color": "#686e7d",
              "fontFamily": "Geist Regular",
              "fontSize": 14,
              "letterSpacing": 3,
              "lineHeight": 22,
              "textAlign": "center",
            }
          }
        >
          3Y
        </Text>
      </TouchableOpacity>
    </View>
    <View
      style={
        {
          "flexDirection": "row",
          "gap": 8,
          "paddingBottom": 0,
          "paddingHorizontal": 16,
          "paddingTop": 24,
          "width": "100%",
        }
      }
    >
      <View
        style={
          {
            "flex": 1,
            "overflow": "hidden",
          }
        }
      >
        <View
          collapsable={false}
          style={
            {
              "transform": [
                {
                  "scale": 1,
                },
              ],
            }
          }
        >
          <View
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": false,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              [
                {
                  "alignItems": "center",
                  "backgroundColor": "#3c4d9d0f",
                  "borderRadius": 12,
                  "justifyContent": "center",
                  "opacity": 1,
                  "paddingHorizontal": 4,
                  "paddingVertical": 16,
                },
                false,
              ]
            }
            testID="token-fund-button"
          >
            <View
              style={
                {
                  "alignItems": "center",
                  "justifyContent": "center",
                }
              }
            >
              <SvgMock
                color="#686e7d"
                fill="currentColor"
                height={20}
                name="Money"
                style={
                  {
                    "height": 20,
                    "width": 20,
                  }
                }
                width={20}
              />
              <Text
                accessibilityRole="text"
                numberOfLines={1}
                style={
                  {
                    "color": "#121314",
                    "flexShrink": 0,
                    "fontFamily": "Geist Medium",
                    "fontSize": 14,
                    "letterSpacing": 0,
                    "lineHeight": 22,
                    "marginTop": 2,
                    "textAlign": "center",
                  }
                }
              >
                Fund
              </Text>
            </View>
          </View>
        </View>
      </View>
      <View
        style={
          {
            "flex": 1,
            "overflow": "hidden",
          }
        }
      >
        <View
          collapsable={false}
          style={
            {
              "transform": [
                {
                  "scale": 1,
                },
              ],
            }
          }
        >
          <View
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": false,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              [
                {
                  "alignItems": "center",
                  "backgroundColor": "#3c4d9d0f",
                  "borderRadius": 12,
                  "justifyContent": "center",
                  "opacity": 1,
                  "paddingHorizontal": 4,
                  "paddingVertical": 16,
                },
                false,
              ]
            }
            testID="token-swap-button"
          >
            <View
              style={
                {
                  "alignItems": "center",
                  "justifyContent": "center",
                }
              }
            >
              <SvgMock
                color="#686e7d"
                fill="currentColor"
                height={20}
                name="SwapVertical"
                style={
                  {
                    "height": 20,
                    "width": 20,
                  }
                }
                width={20}
              />
              <Text
                accessibilityRole="text"
                numberOfLines={1}
                style={
                  {
                    "color": "#121314",
                    "flexShrink": 0,
                    "fontFamily": "Geist Medium",
                    "fontSize": 14,
                    "letterSpacing": 0,
                    "lineHeight": 22,
                    "marginTop": 2,
                    "textAlign": "center",
                  }
                }
              >
                Swap
              </Text>
            </View>
          </View>
        </View>
      </View>
      <View
        style={
          {
            "flex": 1,
            "overflow": "hidden",
          }
        }
      >
        <View
          collapsable={false}
          style={
            {
              "transform": [
                {
                  "scale": 1,
                },
              ],
            }
          }
        >
          <View
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": false,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              [
                {
                  "alignItems": "center",
                  "backgroundColor": "#3c4d9d0f",
                  "borderRadius": 12,
                  "justifyContent": "center",
                  "opacity": 1,
                  "paddingHorizontal": 4,
                  "paddingVertical": 16,
                },
                false,
              ]
            }
            testID="token-bridge-button"
          >
            <View
              style={
                {
                  "alignItems": "center",
                  "justifyContent": "center",
                }
              }
            >
              <SvgMock
                color="#686e7d"
                fill="currentColor"
                height={20}
                name="Bridge"
                style={
                  {
                    "height": 20,
                    "width": 20,
                  }
                }
                width={20}
              />
              <Text
                accessibilityRole="text"
                numberOfLines={1}
                style={
                  {
                    "color": "#121314",
                    "flexShrink": 0,
                    "fontFamily": "Geist Medium",
                    "fontSize": 14,
                    "letterSpacing": 0,
                    "lineHeight": 22,
                    "marginTop": 2,
                    "textAlign": "center",
                  }
                }
              >
                Bridge
              </Text>
            </View>
          </View>
        </View>
      </View>
      <View
        style={
          {
            "flex": 1,
            "overflow": "hidden",
          }
        }
      >
        <View
          collapsable={false}
          style={
            {
              "transform": [
                {
                  "scale": 1,
                },
              ],
            }
          }
        >
          <View
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": false,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              [
                {
                  "alignItems": "center",
                  "backgroundColor": "#3c4d9d0f",
                  "borderRadius": 12,
                  "justifyContent": "center",
                  "opacity": 1,
                  "paddingHorizontal": 4,
                  "paddingVertical": 16,
                },
                false,
              ]
            }
            testID="token-send-button"
          >
            <View
              style={
                {
                  "alignItems": "center",
                  "justifyContent": "center",
                }
              }
            >
              <SvgMock
                color="#686e7d"
                fill="currentColor"
                height={20}
                name="Send"
                style={
                  {
                    "height": 20,
                    "width": 20,
                  }
                }
                width={20}
              />
              <Text
                accessibilityRole="text"
                numberOfLines={1}
                style={
                  {
                    "color": "#121314",
                    "flexShrink": 0,
                    "fontFamily": "Geist Medium",
                    "fontSize": 14,
                    "letterSpacing": 0,
                    "lineHeight": 22,
                    "marginTop": 2,
                    "textAlign": "center",
                  }
                }
              >
                Send
              </Text>
            </View>
          </View>
        </View>
      </View>
      <View
        style={
          {
            "flex": 1,
            "overflow": "hidden",
          }
        }
      >
        <View
          collapsable={false}
          style={
            {
              "transform": [
                {
                  "scale": 1,
                },
              ],
            }
          }
        >
          <View
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": false,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              [
                {
                  "alignItems": "center",
                  "backgroundColor": "#3c4d9d0f",
                  "borderRadius": 12,
                  "justifyContent": "center",
                  "opacity": 1,
                  "paddingHorizontal": 4,
                  "paddingVertical": 16,
                },
                false,
              ]
            }
            testID="token-receive-button"
          >
            <View
              style={
                {
                  "alignItems": "center",
                  "justifyContent": "center",
                }
              }
            >
              <SvgMock
                color="#686e7d"
                fill="currentColor"
                height={20}
                name="Received"
                style={
                  {
                    "height": 20,
                    "width": 20,
                  }
                }
                width={20}
              />
              <Text
                accessibilityRole="text"
                numberOfLines={1}
                style={
                  {
                    "color": "#121314",
                    "flexShrink": 0,
                    "fontFamily": "Geist Medium",
                    "fontSize": 14,
                    "letterSpacing": 0,
                    "lineHeight": 22,
                    "marginTop": 2,
                    "textAlign": "center",
                  }
                }
              >
                Receive
              </Text>
            </View>
          </View>
        </View>
      </View>
    </View>
    <View
      style={
        {
          "flex": 1,
          "paddingHorizontal": 16,
        }
      }
    >
      <Text
        accessibilityRole="text"
        style={
          {
            "color": "#121314",
            "fontFamily": "Geist Bold",
            "fontSize": 18,
            "letterSpacing": 0,
            "lineHeight": 24,
          }
        }
      >
        Your balance
      </Text>
      <TouchableOpacity
        disabled={false}
        onLongPress={[Function]}
        onPress={[Function]}
        style={
          {
            "alignItems": "center",
            "flex": 1,
            "flexDirection": "row",
            "height": 64,
          }
        }
        testID="asset-ETH"
      >
        <View
          onLayout={[Function]}
          style={
            {
              "alignSelf": "center",
              "position": "relative",
            }
          }
          testID="badge-wrapper-badge"
        >
          <View>
            <View
              style={
                {
                  "backgroundColor": "#ffffff",
                  "borderRadius": 20,
                  "height": 40,
                  "overflow": "hidden",
                  "width": 40,
                }
              }
            >
              <Image
                onError={[Function]}
                resizeMode="contain"
                source={
                  {
                    "uri": "",
                  }
                }
                style={
                  {
                    "flex": 1,
                    "height": undefined,
                    "width": undefined,
                  }
                }
                testID="token-avatar-image"
              />
            </View>
          </View>
          <View
            style={
              {
                "alignItems": "center",
                "aspectRatio": 1,
                "bottom": 0,
                "height": 0,
                "justifyContent": "center",
                "position": "absolute",
                "right": 0,
                "transform": [
                  {
                    "translateX": 0,
                  },
                  {
                    "translateY": 0,
                  },
                ],
              }
            }
          >
            <View
              onLayout={[Function]}
              style={
                {
                  "alignItems": "center",
                  "aspectRatio": 1,
                  "height": "50%",
                  "justifyContent": "center",
                  "maxHeight": 24,
                  "minHeight": 8,
                  "opacity": 0,
                }
              }
              testID="badgenetwork"
            >
              <View
                style={
                  {
                    "alignItems": "center",
                    "backgroundColor": "#ffffff",
                    "borderColor": "#ffffff",
                    "borderRadius": 8,
                    "borderWidth": 2,
                    "height": 32,
                    "justifyContent": "center",
                    "overflow": "hidden",
                    "shadowColor": "#0000001a",
                    "shadowOffset": {
                      "height": 2,
                      "width": 0,
                    },
                    "shadowOpacity": 1,
                    "shadowRadius": 4,
                    "transform": [
                      {
                        "scale": 1,
                      },
                    ],
                    "width": 32,
                  }
                }
              >
                <Image
                  onError={[Function]}
                  resizeMode="contain"
                  source={1}
                  style={
                    {
                      "height": 32,
                      "width": 32,
                    }
                  }
                  testID="network-avatar-image"
                />
              </View>
            </View>
          </View>
        </View>
        <View
          style={
            {
              "alignContent": "flex-start",
              "alignItems": "flex-start",
              "flex": 1,
              "flexDirection": "column",
              "paddingLeft": 16,
            }
          }
        >
          <Text
            accessibilityRole="text"
            style={
              {
                "color": "#121314",
                "fontFamily": "Geist Regular",
                "fontSize": 16,
                "letterSpacing": 0,
                "lineHeight": 24,
              }
            }
          >
            Ethereum
          </Text>
          <Text
            accessibilityRole="text"
            style={
              {
                "color": "#686e7d",
                "fontFamily": "Geist Regular",
                "fontSize": 14,
                "fontWeight": "400",
                "letterSpacing": 0,
                "lineHeight": 22,
              }
            }
            testID="token-amount-balance-test-id"
          >
            0 ETH
          </Text>
        </View>
        <View
          style={
            {
              "alignItems": "flex-end",
              "flexShrink": 0,
            }
          }
        >
          <Text
            accessibilityRole="text"
            style={
              {
                "color": "#121314",
                "fontFamily": "Geist Medium",
                "fontSize": 16,
                "letterSpacing": 0,
                "lineHeight": 24,
              }
            }
            testID="balance-test-id"
          >
            1500
          </Text>
        </View>
      </TouchableOpacity>
    </View>
    <View
      style={
        {
          "marginBottom": 20,
          "paddingHorizontal": 16,
        }
      }
    >
      <View
        style={
          {
            "gap": 24,
            "marginTop": 24,
          }
        }
      />
    </View>
  </View>
</View>
`;

exports[`AssetOverview should render native balances even if there are no accounts for the asset chain in the state 1`] = `
<View
  style={
    {
      "paddingTop": 20,
    }
  }
  testID="token-asset-overview"
>
  <View>
    <View
      style={
        {
          "paddingHorizontal": 16,
        }
      }
    >
      <Text
        accessibilityRole="text"
        style={
          {
            "color": "#686e7d",
            "fontFamily": "Geist Medium",
            "fontSize": 16,
            "letterSpacing": 0,
            "lineHeight": 24,
          }
        }
      >
        Ethereum
         (
        ETH
        )
      </Text>
      <Text
        accessibilityRole="text"
        style={
          {
            "color": "#121314",
            "fontFamily": "Geist Bold",
            "fontSize": 24,
            "letterSpacing": 0,
            "lineHeight": 32,
          }
        }
        testID="token-price"
      >
        <View
          style={
            {
              "paddingTop": 8,
            }
          }
        >
          <View
            onLayout={[Function]}
          >
            <View
              style={
                {
                  "position": "relative",
                }
              }
            >
              <View
                style={
                  [
                    {
                      "borderRadius": 6,
                      "height": 32,
                      "width": 100,
                    },
                    {
                      "backgroundColor": "#f3f5f9",
                      "overflow": "hidden",
                    },
                  ]
                }
              />
            </View>
          </View>
        </View>
      </Text>
      <Text
        accessibilityRole="text"
        style={
          {
            "color": "#121314",
            "fontFamily": "Geist Regular",
            "fontSize": 16,
            "letterSpacing": 0,
            "lineHeight": 24,
          }
        }
      >
        <View
          style={
            {
              "paddingTop": 2,
            }
          }
          testID="loading-price-diff"
        >
          <View
            onLayout={[Function]}
          >
            <View
              style={
                {
                  "position": "relative",
                }
              }
            >
              <View
                style={
                  [
                    {
                      "borderRadius": 6,
                      "height": 18,
                      "width": 150,
                    },
                    {
                      "backgroundColor": "#f3f5f9",
                      "overflow": "hidden",
                    },
                  ]
                }
              />
            </View>
          </View>
        </View>
      </Text>
    </View>
    <View
      style={
        {
          "paddingHorizontal": 16,
          "paddingTop": 10,
          "width": 750,
        }
      }
    >
      <View
        onLayout={[Function]}
      >
        <View
          style={
            {
              "position": "relative",
            }
          }
        >
          <View
            style={
              [
                {
                  "borderRadius": 6,
                  "height": 586.96,
                  "width": 718,
                },
                {
                  "backgroundColor": "#f3f5f9",
                  "overflow": "hidden",
                },
              ]
            }
          />
        </View>
      </View>
    </View>
    <View
      style={
        {
          "display": "flex",
          "flexDirection": "row",
          "justifyContent": "space-around",
          "paddingHorizontal": 10,
          "paddingTop": 20,
        }
      }
    >
      <TouchableOpacity
        onPress={[Function]}
        style={
          {
            "alignItems": "center",
            "backgroundColor": "#858b9a29",
            "borderRadius": 40,
            "justifyContent": "center",
            "paddingHorizontal": 8,
            "paddingLeft": 10,
            "paddingVertical": 2,
          }
        }
      >
        <Text
          accessibilityRole="text"
          style={
            {
              "color": "#121314",
              "fontFamily": "Geist Regular",
              "fontSize": 14,
              "letterSpacing": 3,
              "lineHeight": 22,
              "textAlign": "center",
            }
          }
        >
          1D
        </Text>
      </TouchableOpacity>
      <TouchableOpacity
        onPress={[Function]}
        style={
          {
            "alignItems": "center",
            "backgroundColor": "#ffffff",
            "borderRadius": 40,
            "justifyContent": "center",
            "paddingHorizontal": 8,
            "paddingLeft": 10,
            "paddingVertical": 2,
          }
        }
      >
        <Text
          accessibilityRole="text"
          style={
            {
              "color": "#686e7d",
              "fontFamily": "Geist Regular",
              "fontSize": 14,
              "letterSpacing": 3,
              "lineHeight": 22,
              "textAlign": "center",
            }
          }
        >
          1W
        </Text>
      </TouchableOpacity>
      <TouchableOpacity
        onPress={[Function]}
        style={
          {
            "alignItems": "center",
            "backgroundColor": "#ffffff",
            "borderRadius": 40,
            "justifyContent": "center",
            "paddingHorizontal": 8,
            "paddingLeft": 10,
            "paddingVertical": 2,
          }
        }
      >
        <Text
          accessibilityRole="text"
          style={
            {
              "color": "#686e7d",
              "fontFamily": "Geist Regular",
              "fontSize": 14,
              "letterSpacing": 3,
              "lineHeight": 22,
              "textAlign": "center",
            }
          }
        >
          1M
        </Text>
      </TouchableOpacity>
      <TouchableOpacity
        onPress={[Function]}
        style={
          {
            "alignItems": "center",
            "backgroundColor": "#ffffff",
            "borderRadius": 40,
            "justifyContent": "center",
            "paddingHorizontal": 8,
            "paddingLeft": 10,
            "paddingVertical": 2,
          }
        }
      >
        <Text
          accessibilityRole="text"
          style={
            {
              "color": "#686e7d",
              "fontFamily": "Geist Regular",
              "fontSize": 14,
              "letterSpacing": 3,
              "lineHeight": 22,
              "textAlign": "center",
            }
          }
        >
          3M
        </Text>
      </TouchableOpacity>
      <TouchableOpacity
        onPress={[Function]}
        style={
          {
            "alignItems": "center",
            "backgroundColor": "#ffffff",
            "borderRadius": 40,
            "justifyContent": "center",
            "paddingHorizontal": 8,
            "paddingLeft": 10,
            "paddingVertical": 2,
          }
        }
      >
        <Text
          accessibilityRole="text"
          style={
            {
              "color": "#686e7d",
              "fontFamily": "Geist Regular",
              "fontSize": 14,
              "letterSpacing": 3,
              "lineHeight": 22,
              "textAlign": "center",
            }
          }
        >
          1Y
        </Text>
      </TouchableOpacity>
      <TouchableOpacity
        onPress={[Function]}
        style={
          {
            "alignItems": "center",
            "backgroundColor": "#ffffff",
            "borderRadius": 40,
            "justifyContent": "center",
            "paddingHorizontal": 8,
            "paddingLeft": 10,
            "paddingVertical": 2,
          }
        }
      >
        <Text
          accessibilityRole="text"
          style={
            {
              "color": "#686e7d",
              "fontFamily": "Geist Regular",
              "fontSize": 14,
              "letterSpacing": 3,
              "lineHeight": 22,
              "textAlign": "center",
            }
          }
        >
          3Y
        </Text>
      </TouchableOpacity>
    </View>
    <View
      style={
        {
          "flexDirection": "row",
          "gap": 8,
          "paddingBottom": 0,
          "paddingHorizontal": 16,
          "paddingTop": 24,
          "width": "100%",
        }
      }
    >
      <View
        style={
          {
            "flex": 1,
            "overflow": "hidden",
          }
        }
      >
        <View
          collapsable={false}
          style={
            {
              "transform": [
                {
                  "scale": 1,
                },
              ],
            }
          }
        >
          <View
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": false,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              [
                {
                  "alignItems": "center",
                  "backgroundColor": "#3c4d9d0f",
                  "borderRadius": 12,
                  "justifyContent": "center",
                  "opacity": 1,
                  "paddingHorizontal": 4,
                  "paddingVertical": 16,
                },
                false,
              ]
            }
            testID="token-fund-button"
          >
            <View
              style={
                {
                  "alignItems": "center",
                  "justifyContent": "center",
                }
              }
            >
              <SvgMock
                color="#686e7d"
                fill="currentColor"
                height={20}
                name="Money"
                style={
                  {
                    "height": 20,
                    "width": 20,
                  }
                }
                width={20}
              />
              <Text
                accessibilityRole="text"
                numberOfLines={1}
                style={
                  {
                    "color": "#121314",
                    "flexShrink": 0,
                    "fontFamily": "Geist Medium",
                    "fontSize": 14,
                    "letterSpacing": 0,
                    "lineHeight": 22,
                    "marginTop": 2,
                    "textAlign": "center",
                  }
                }
              >
                Fund
              </Text>
            </View>
          </View>
        </View>
      </View>
      <View
        style={
          {
            "flex": 1,
            "overflow": "hidden",
          }
        }
      >
        <View
          collapsable={false}
          style={
            {
              "transform": [
                {
                  "scale": 1,
                },
              ],
            }
          }
        >
          <View
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": false,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              [
                {
                  "alignItems": "center",
                  "backgroundColor": "#3c4d9d0f",
                  "borderRadius": 12,
                  "justifyContent": "center",
                  "opacity": 1,
                  "paddingHorizontal": 4,
                  "paddingVertical": 16,
                },
                false,
              ]
            }
            testID="token-swap-button"
          >
            <View
              style={
                {
                  "alignItems": "center",
                  "justifyContent": "center",
                }
              }
            >
              <SvgMock
                color="#686e7d"
                fill="currentColor"
                height={20}
                name="SwapVertical"
                style={
                  {
                    "height": 20,
                    "width": 20,
                  }
                }
                width={20}
              />
              <Text
                accessibilityRole="text"
                numberOfLines={1}
                style={
                  {
                    "color": "#121314",
                    "flexShrink": 0,
                    "fontFamily": "Geist Medium",
                    "fontSize": 14,
                    "letterSpacing": 0,
                    "lineHeight": 22,
                    "marginTop": 2,
                    "textAlign": "center",
                  }
                }
              >
                Swap
              </Text>
            </View>
          </View>
        </View>
      </View>
      <View
        style={
          {
            "flex": 1,
            "overflow": "hidden",
          }
        }
      >
        <View
          collapsable={false}
          style={
            {
              "transform": [
                {
                  "scale": 1,
                },
              ],
            }
          }
        >
          <View
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": false,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              [
                {
                  "alignItems": "center",
                  "backgroundColor": "#3c4d9d0f",
                  "borderRadius": 12,
                  "justifyContent": "center",
                  "opacity": 1,
                  "paddingHorizontal": 4,
                  "paddingVertical": 16,
                },
                false,
              ]
            }
            testID="token-bridge-button"
          >
            <View
              style={
                {
                  "alignItems": "center",
                  "justifyContent": "center",
                }
              }
            >
              <SvgMock
                color="#686e7d"
                fill="currentColor"
                height={20}
                name="Bridge"
                style={
                  {
                    "height": 20,
                    "width": 20,
                  }
                }
                width={20}
              />
              <Text
                accessibilityRole="text"
                numberOfLines={1}
                style={
                  {
                    "color": "#121314",
                    "flexShrink": 0,
                    "fontFamily": "Geist Medium",
                    "fontSize": 14,
                    "letterSpacing": 0,
                    "lineHeight": 22,
                    "marginTop": 2,
                    "textAlign": "center",
                  }
                }
              >
                Bridge
              </Text>
            </View>
          </View>
        </View>
      </View>
      <View
        style={
          {
            "flex": 1,
            "overflow": "hidden",
          }
        }
      >
        <View
          collapsable={false}
          style={
            {
              "transform": [
                {
                  "scale": 1,
                },
              ],
            }
          }
        >
          <View
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": false,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              [
                {
                  "alignItems": "center",
                  "backgroundColor": "#3c4d9d0f",
                  "borderRadius": 12,
                  "justifyContent": "center",
                  "opacity": 1,
                  "paddingHorizontal": 4,
                  "paddingVertical": 16,
                },
                false,
              ]
            }
            testID="token-send-button"
          >
            <View
              style={
                {
                  "alignItems": "center",
                  "justifyContent": "center",
                }
              }
            >
              <SvgMock
                color="#686e7d"
                fill="currentColor"
                height={20}
                name="Send"
                style={
                  {
                    "height": 20,
                    "width": 20,
                  }
                }
                width={20}
              />
              <Text
                accessibilityRole="text"
                numberOfLines={1}
                style={
                  {
                    "color": "#121314",
                    "flexShrink": 0,
                    "fontFamily": "Geist Medium",
                    "fontSize": 14,
                    "letterSpacing": 0,
                    "lineHeight": 22,
                    "marginTop": 2,
                    "textAlign": "center",
                  }
                }
              >
                Send
              </Text>
            </View>
          </View>
        </View>
      </View>
      <View
        style={
          {
            "flex": 1,
            "overflow": "hidden",
          }
        }
      >
        <View
          collapsable={false}
          style={
            {
              "transform": [
                {
                  "scale": 1,
                },
              ],
            }
          }
        >
          <View
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": false,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              [
                {
                  "alignItems": "center",
                  "backgroundColor": "#3c4d9d0f",
                  "borderRadius": 12,
                  "justifyContent": "center",
                  "opacity": 1,
                  "paddingHorizontal": 4,
                  "paddingVertical": 16,
                },
                false,
              ]
            }
            testID="token-receive-button"
          >
            <View
              style={
                {
                  "alignItems": "center",
                  "justifyContent": "center",
                }
              }
            >
              <SvgMock
                color="#686e7d"
                fill="currentColor"
                height={20}
                name="Received"
                style={
                  {
                    "height": 20,
                    "width": 20,
                  }
                }
                width={20}
              />
              <Text
                accessibilityRole="text"
                numberOfLines={1}
                style={
                  {
                    "color": "#121314",
                    "flexShrink": 0,
                    "fontFamily": "Geist Medium",
                    "fontSize": 14,
                    "letterSpacing": 0,
                    "lineHeight": 22,
                    "marginTop": 2,
                    "textAlign": "center",
                  }
                }
              >
                Receive
              </Text>
            </View>
          </View>
        </View>
      </View>
    </View>
    <View
      style={
        {
          "flex": 1,
          "paddingHorizontal": 16,
        }
      }
    >
      <Text
        accessibilityRole="text"
        style={
          {
            "color": "#121314",
            "fontFamily": "Geist Bold",
            "fontSize": 18,
            "letterSpacing": 0,
            "lineHeight": 24,
          }
        }
      >
        Your balance
      </Text>
      <TouchableOpacity
        disabled={true}
        onLongPress={[Function]}
        onPress={[Function]}
        style={
          {
            "alignItems": "center",
            "flex": 1,
            "flexDirection": "row",
            "height": 64,
          }
        }
        testID="asset-ETH"
      >
        <View
          onLayout={[Function]}
          style={
            {
              "alignSelf": "center",
              "position": "relative",
            }
          }
          testID="badge-wrapper-badge"
        >
          <View>
            <View
              useNativeDriver={true}
            >
              <Image
                fadeIn={true}
                onError={[Function]}
                onLoadEnd={[Function]}
                source={
                  {
                    "uri": "",
                  }
                }
                style={
                  [
                    {
                      "borderRadius": 12,
                      "height": 24,
                      "width": 24,
                    },
                    undefined,
                    false,
                    false,
                    {
                      "borderRadius": 20,
                      "height": 40,
                      "overflow": "hidden",
                      "width": 40,
                    },
                  ]
                }
                testID="Ethereum"
              />
              <View
                collapsable={false}
                style={
                  {
                    "bottom": 0,
                    "left": 0,
                    "opacity": 1,
                    "position": "absolute",
                    "right": 0,
                    "top": 0,
                  }
                }
              >
                <View
                  style={
                    [
                      {
                        "borderRadius": 20,
                        "height": 40,
                        "overflow": "hidden",
                        "width": 40,
                      },
                      {
                        "backgroundColor": "#eee",
                      },
                      undefined,
                    ]
                  }
                />
              </View>
            </View>
          </View>
          <View
            style={
              {
                "alignItems": "center",
                "aspectRatio": 1,
                "bottom": 0,
                "height": 0,
                "justifyContent": "center",
                "position": "absolute",
                "right": 0,
                "transform": [
                  {
                    "translateX": 0,
                  },
                  {
                    "translateY": 0,
                  },
                ],
              }
            }
          >
            <View
              onLayout={[Function]}
              style={
                {
                  "alignItems": "center",
                  "aspectRatio": 1,
                  "height": "50%",
                  "justifyContent": "center",
                  "maxHeight": 24,
                  "minHeight": 8,
                  "opacity": 0,
                }
              }
              testID="badgenetwork"
            >
              <View
                style={
                  {
                    "alignItems": "center",
                    "backgroundColor": "#f3f5f9",
                    "borderColor": "#ffffff",
                    "borderRadius": 16,
                    "borderWidth": 2,
                    "height": 32,
                    "justifyContent": "center",
                    "overflow": "hidden",
                    "shadowColor": "#0000001a",
                    "shadowOffset": {
                      "height": 2,
                      "width": 0,
                    },
                    "shadowOpacity": 1,
                    "shadowRadius": 4,
                    "transform": [
                      {
                        "scale": 1,
                      },
                    ],
                    "width": 32,
                  }
                }
              >
                <Text
                  accessibilityRole="text"
                  style={
                    {
                      "color": "#121314",
                      "fontFamily": "Geist Regular",
                      "fontSize": 16,
                      "letterSpacing": 0,
                      "lineHeight": 24,
                    }
                  }
                >
                  ?
                </Text>
              </View>
            </View>
          </View>
        </View>
        <View
          style={
            {
              "alignContent": "flex-start",
              "alignItems": "flex-start",
              "flex": 1,
              "flexDirection": "column",
              "paddingLeft": 16,
            }
          }
        >
          <Text
            accessibilityRole="text"
            style={
              {
                "color": "#121314",
                "fontFamily": "Geist Regular",
                "fontSize": 16,
                "letterSpacing": 0,
                "lineHeight": 24,
              }
            }
          >
            Ethereum
          </Text>
          <Text
            accessibilityRole="text"
            style={
              {
                "color": "#686e7d",
                "fontFamily": "Geist Regular",
                "fontSize": 14,
                "fontWeight": "400",
                "letterSpacing": 0,
                "lineHeight": 22,
              }
            }
            testID="token-amount-balance-test-id"
          >
            0 ETH
          </Text>
        </View>
        <View
          style={
            {
              "alignItems": "flex-end",
              "flexShrink": 0,
            }
          }
        >
          <Text
            accessibilityRole="text"
            style={
              {
                "color": "#121314",
                "fontFamily": "Geist Medium",
                "fontSize": 16,
                "letterSpacing": 0,
                "lineHeight": 24,
              }
            }
            testID="balance-test-id"
          >
            1500
          </Text>
        </View>
      </TouchableOpacity>
    </View>
    <View
      style={
        {
          "marginBottom": 20,
          "paddingHorizontal": 16,
        }
      }
    >
      <View
        style={
          {
            "gap": 24,
            "marginTop": 24,
          }
        }
      />
    </View>
  </View>
</View>
`;

exports[`AssetOverview should render native balances when non evm network is selected 1`] = `
<View
  style={
    {
      "paddingTop": 20,
    }
  }
  testID="token-asset-overview"
>
  <View>
    <View
      style={
        {
          "paddingHorizontal": 16,
        }
      }
    >
      <Text
        accessibilityRole="text"
        style={
          {
            "color": "#686e7d",
            "fontFamily": "Geist Medium",
            "fontSize": 16,
            "letterSpacing": 0,
            "lineHeight": 24,
          }
        }
      >
        Ethereum
         (
        ETH
        )
      </Text>
      <Text
        accessibilityRole="text"
        style={
          {
            "color": "#121314",
            "fontFamily": "Geist Bold",
            "fontSize": 24,
            "letterSpacing": 0,
            "lineHeight": 32,
          }
        }
        testID="token-price"
      >
        $151.23
      </Text>
      <Text
        accessibilityRole="text"
        style={
          {
            "color": "#121314",
            "fontFamily": "Geist Regular",
            "fontSize": 16,
            "letterSpacing": 0,
            "lineHeight": 24,
          }
        }
      >
        <Text
          accessibilityRole="text"
          style={
            {
              "color": "#457a39",
              "fontFamily": "Geist Medium",
              "fontSize": 16,
              "letterSpacing": 0,
              "lineHeight": 24,
            }
          }
        >
          <Text
            allowFontScaling={false}
            selectable={false}
            style={
              [
                {
                  "color": undefined,
                  "fontSize": 16,
                },
                {
                  "marginTop": 10,
                },
                {
                  "fontFamily": "Feather",
                  "fontStyle": "normal",
                  "fontWeight": "normal",
                },
                {},
              ]
            }
          >
            
          </Text>
           
          $151.23
           (
          +
          Infinity
          %)
           
          <Text
            accessibilityRole="text"
            style={
              {
                "color": "#686e7d",
                "fontFamily": "Geist Medium",
                "fontSize": 16,
                "letterSpacing": 0,
                "lineHeight": 24,
              }
            }
            testID="price-label"
          >
            Today
          </Text>
        </Text>
      </Text>
    </View>
    <View
      style={
        {
          "height": 576.96,
          "marginVertical": 10,
          "paddingLeft": 0,
          "paddingRight": 0,
          "paddingTop": 0,
          "width": 750,
        }
      }
    >
      <View
        onMoveShouldSetResponder={[Function]}
        onMoveShouldSetResponderCapture={[Function]}
        onResponderEnd={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderReject={[Function]}
        onResponderRelease={[Function]}
        onResponderStart={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        onStartShouldSetResponderCapture={[Function]}
        style={
          {
            "flex": 1,
          }
        }
      >
        <View
          style={
            {
              "flex": 1,
            }
          }
        >
          <View
            onLayout={[Function]}
            style={
              {
                "flex": 1,
              }
            }
          />
        </View>
      </View>
    </View>
    <View
      style={
        {
          "display": "flex",
          "flexDirection": "row",
          "justifyContent": "space-around",
          "paddingHorizontal": 10,
          "paddingTop": 20,
        }
      }
    >
      <TouchableOpacity
        onPress={[Function]}
        style={
          {
            "alignItems": "center",
            "backgroundColor": "#858b9a29",
            "borderRadius": 40,
            "justifyContent": "center",
            "paddingHorizontal": 8,
            "paddingLeft": 10,
            "paddingVertical": 2,
          }
        }
      >
        <Text
          accessibilityRole="text"
          style={
            {
              "color": "#121314",
              "fontFamily": "Geist Regular",
              "fontSize": 14,
              "letterSpacing": 3,
              "lineHeight": 22,
              "textAlign": "center",
            }
          }
        >
          1D
        </Text>
      </TouchableOpacity>
      <TouchableOpacity
        onPress={[Function]}
        style={
          {
            "alignItems": "center",
            "backgroundColor": "#ffffff",
            "borderRadius": 40,
            "justifyContent": "center",
            "paddingHorizontal": 8,
            "paddingLeft": 10,
            "paddingVertical": 2,
          }
        }
      >
        <Text
          accessibilityRole="text"
          style={
            {
              "color": "#686e7d",
              "fontFamily": "Geist Regular",
              "fontSize": 14,
              "letterSpacing": 3,
              "lineHeight": 22,
              "textAlign": "center",
            }
          }
        >
          1W
        </Text>
      </TouchableOpacity>
      <TouchableOpacity
        onPress={[Function]}
        style={
          {
            "alignItems": "center",
            "backgroundColor": "#ffffff",
            "borderRadius": 40,
            "justifyContent": "center",
            "paddingHorizontal": 8,
            "paddingLeft": 10,
            "paddingVertical": 2,
          }
        }
      >
        <Text
          accessibilityRole="text"
          style={
            {
              "color": "#686e7d",
              "fontFamily": "Geist Regular",
              "fontSize": 14,
              "letterSpacing": 3,
              "lineHeight": 22,
              "textAlign": "center",
            }
          }
        >
          1M
        </Text>
      </TouchableOpacity>
      <TouchableOpacity
        onPress={[Function]}
        style={
          {
            "alignItems": "center",
            "backgroundColor": "#ffffff",
            "borderRadius": 40,
            "justifyContent": "center",
            "paddingHorizontal": 8,
            "paddingLeft": 10,
            "paddingVertical": 2,
          }
        }
      >
        <Text
          accessibilityRole="text"
          style={
            {
              "color": "#686e7d",
              "fontFamily": "Geist Regular",
              "fontSize": 14,
              "letterSpacing": 3,
              "lineHeight": 22,
              "textAlign": "center",
            }
          }
        >
          3M
        </Text>
      </TouchableOpacity>
      <TouchableOpacity
        onPress={[Function]}
        style={
          {
            "alignItems": "center",
            "backgroundColor": "#ffffff",
            "borderRadius": 40,
            "justifyContent": "center",
            "paddingHorizontal": 8,
            "paddingLeft": 10,
            "paddingVertical": 2,
          }
        }
      >
        <Text
          accessibilityRole="text"
          style={
            {
              "color": "#686e7d",
              "fontFamily": "Geist Regular",
              "fontSize": 14,
              "letterSpacing": 3,
              "lineHeight": 22,
              "textAlign": "center",
            }
          }
        >
          1Y
        </Text>
      </TouchableOpacity>
      <TouchableOpacity
        onPress={[Function]}
        style={
          {
            "alignItems": "center",
            "backgroundColor": "#ffffff",
            "borderRadius": 40,
            "justifyContent": "center",
            "paddingHorizontal": 8,
            "paddingLeft": 10,
            "paddingVertical": 2,
          }
        }
      >
        <Text
          accessibilityRole="text"
          style={
            {
              "color": "#686e7d",
              "fontFamily": "Geist Regular",
              "fontSize": 14,
              "letterSpacing": 3,
              "lineHeight": 22,
              "textAlign": "center",
            }
          }
        >
          All
        </Text>
      </TouchableOpacity>
    </View>
    <View
      style={
        {
          "flexDirection": "row",
          "gap": 8,
          "paddingBottom": 0,
          "paddingHorizontal": 16,
          "paddingTop": 24,
          "width": "100%",
        }
      }
    >
      <View
        style={
          {
            "flex": 1,
            "overflow": "hidden",
          }
        }
      >
        <View
          collapsable={false}
          style={
            {
              "transform": [
                {
                  "scale": 1,
                },
              ],
            }
          }
        >
          <View
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": false,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              [
                {
                  "alignItems": "center",
                  "backgroundColor": "#3c4d9d0f",
                  "borderRadius": 12,
                  "justifyContent": "center",
                  "opacity": 1,
                  "paddingHorizontal": 4,
                  "paddingVertical": 16,
                },
                false,
              ]
            }
            testID="token-fund-button"
          >
            <View
              style={
                {
                  "alignItems": "center",
                  "justifyContent": "center",
                }
              }
            >
              <SvgMock
                color="#686e7d"
                fill="currentColor"
                height={20}
                name="Money"
                style={
                  {
                    "height": 20,
                    "width": 20,
                  }
                }
                width={20}
              />
              <Text
                accessibilityRole="text"
                numberOfLines={1}
                style={
                  {
                    "color": "#121314",
                    "flexShrink": 0,
                    "fontFamily": "Geist Medium",
                    "fontSize": 14,
                    "letterSpacing": 0,
                    "lineHeight": 22,
                    "marginTop": 2,
                    "textAlign": "center",
                  }
                }
              >
                Fund
              </Text>
            </View>
          </View>
        </View>
      </View>
      <View
        style={
          {
            "flex": 1,
            "overflow": "hidden",
          }
        }
      >
        <View
          collapsable={false}
          style={
            {
              "transform": [
                {
                  "scale": 1,
                },
              ],
            }
          }
        >
          <View
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": false,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              [
                {
                  "alignItems": "center",
                  "backgroundColor": "#3c4d9d0f",
                  "borderRadius": 12,
                  "justifyContent": "center",
                  "opacity": 1,
                  "paddingHorizontal": 4,
                  "paddingVertical": 16,
                },
                false,
              ]
            }
            testID="token-swap-button"
          >
            <View
              style={
                {
                  "alignItems": "center",
                  "justifyContent": "center",
                }
              }
            >
              <SvgMock
                color="#686e7d"
                fill="currentColor"
                height={20}
                name="SwapVertical"
                style={
                  {
                    "height": 20,
                    "width": 20,
                  }
                }
                width={20}
              />
              <Text
                accessibilityRole="text"
                numberOfLines={1}
                style={
                  {
                    "color": "#121314",
                    "flexShrink": 0,
                    "fontFamily": "Geist Medium",
                    "fontSize": 14,
                    "letterSpacing": 0,
                    "lineHeight": 22,
                    "marginTop": 2,
                    "textAlign": "center",
                  }
                }
              >
                Swap
              </Text>
            </View>
          </View>
        </View>
      </View>
      <View
        style={
          {
            "flex": 1,
            "overflow": "hidden",
          }
        }
      >
        <View
          collapsable={false}
          style={
            {
              "transform": [
                {
                  "scale": 1,
                },
              ],
            }
          }
        >
          <View
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": false,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              [
                {
                  "alignItems": "center",
                  "backgroundColor": "#3c4d9d0f",
                  "borderRadius": 12,
                  "justifyContent": "center",
                  "opacity": 1,
                  "paddingHorizontal": 4,
                  "paddingVertical": 16,
                },
                false,
              ]
            }
            testID="token-bridge-button"
          >
            <View
              style={
                {
                  "alignItems": "center",
                  "justifyContent": "center",
                }
              }
            >
              <SvgMock
                color="#686e7d"
                fill="currentColor"
                height={20}
                name="Bridge"
                style={
                  {
                    "height": 20,
                    "width": 20,
                  }
                }
                width={20}
              />
              <Text
                accessibilityRole="text"
                numberOfLines={1}
                style={
                  {
                    "color": "#121314",
                    "flexShrink": 0,
                    "fontFamily": "Geist Medium",
                    "fontSize": 14,
                    "letterSpacing": 0,
                    "lineHeight": 22,
                    "marginTop": 2,
                    "textAlign": "center",
                  }
                }
              >
                Bridge
              </Text>
            </View>
          </View>
        </View>
      </View>
      <View
        style={
          {
            "flex": 1,
            "overflow": "hidden",
          }
        }
      >
        <View
          collapsable={false}
          style={
            {
              "transform": [
                {
                  "scale": 1,
                },
              ],
            }
          }
        >
          <View
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": false,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              [
                {
                  "alignItems": "center",
                  "backgroundColor": "#3c4d9d0f",
                  "borderRadius": 12,
                  "justifyContent": "center",
                  "opacity": 1,
                  "paddingHorizontal": 4,
                  "paddingVertical": 16,
                },
                false,
              ]
            }
            testID="token-send-button"
          >
            <View
              style={
                {
                  "alignItems": "center",
                  "justifyContent": "center",
                }
              }
            >
              <SvgMock
                color="#686e7d"
                fill="currentColor"
                height={20}
                name="Send"
                style={
                  {
                    "height": 20,
                    "width": 20,
                  }
                }
                width={20}
              />
              <Text
                accessibilityRole="text"
                numberOfLines={1}
                style={
                  {
                    "color": "#121314",
                    "flexShrink": 0,
                    "fontFamily": "Geist Medium",
                    "fontSize": 14,
                    "letterSpacing": 0,
                    "lineHeight": 22,
                    "marginTop": 2,
                    "textAlign": "center",
                  }
                }
              >
                Send
              </Text>
            </View>
          </View>
        </View>
      </View>
      <View
        style={
          {
            "flex": 1,
            "overflow": "hidden",
          }
        }
      >
        <View
          collapsable={false}
          style={
            {
              "transform": [
                {
                  "scale": 1,
                },
              ],
            }
          }
        >
          <View
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": false,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              [
                {
                  "alignItems": "center",
                  "backgroundColor": "#3c4d9d0f",
                  "borderRadius": 12,
                  "justifyContent": "center",
                  "opacity": 1,
                  "paddingHorizontal": 4,
                  "paddingVertical": 16,
                },
                false,
              ]
            }
            testID="token-receive-button"
          >
            <View
              style={
                {
                  "alignItems": "center",
                  "justifyContent": "center",
                }
              }
            >
              <SvgMock
                color="#686e7d"
                fill="currentColor"
                height={20}
                name="Received"
                style={
                  {
                    "height": 20,
                    "width": 20,
                  }
                }
                width={20}
              />
              <Text
                accessibilityRole="text"
                numberOfLines={1}
                style={
                  {
                    "color": "#121314",
                    "flexShrink": 0,
                    "fontFamily": "Geist Medium",
                    "fontSize": 14,
                    "letterSpacing": 0,
                    "lineHeight": 22,
                    "marginTop": 2,
                    "textAlign": "center",
                  }
                }
              >
                Receive
              </Text>
            </View>
          </View>
        </View>
      </View>
    </View>
    <View
      style={
        {
          "flex": 1,
          "paddingHorizontal": 16,
        }
      }
    >
      <Text
        accessibilityRole="text"
        style={
          {
            "color": "#121314",
            "fontFamily": "Geist Bold",
            "fontSize": 18,
            "letterSpacing": 0,
            "lineHeight": 24,
          }
        }
      >
        Your balance
      </Text>
      <TouchableOpacity
        disabled={true}
        onLongPress={[Function]}
        onPress={[Function]}
        style={
          {
            "alignItems": "center",
            "flex": 1,
            "flexDirection": "row",
            "height": 64,
          }
        }
        testID="asset-ETH"
      >
        <View
          onLayout={[Function]}
          style={
            {
              "alignSelf": "center",
              "position": "relative",
            }
          }
          testID="badge-wrapper-badge"
        >
          <View>
            <View
              useNativeDriver={true}
            >
              <Image
                fadeIn={true}
                onError={[Function]}
                onLoadEnd={[Function]}
                source={
                  {
                    "uri": "",
                  }
                }
                style={
                  [
                    {
                      "borderRadius": 12,
                      "height": 24,
                      "width": 24,
                    },
                    undefined,
                    false,
                    false,
                    {
                      "borderRadius": 20,
                      "height": 40,
                      "overflow": "hidden",
                      "width": 40,
                    },
                  ]
                }
                testID="Ethereum"
              />
              <View
                collapsable={false}
                style={
                  {
                    "bottom": 0,
                    "left": 0,
                    "opacity": 1,
                    "position": "absolute",
                    "right": 0,
                    "top": 0,
                  }
                }
              >
                <View
                  style={
                    [
                      {
                        "borderRadius": 20,
                        "height": 40,
                        "overflow": "hidden",
                        "width": 40,
                      },
                      {
                        "backgroundColor": "#eee",
                      },
                      undefined,
                    ]
                  }
                />
              </View>
            </View>
          </View>
          <View
            style={
              {
                "alignItems": "center",
                "aspectRatio": 1,
                "bottom": 0,
                "height": 0,
                "justifyContent": "center",
                "position": "absolute",
                "right": 0,
                "transform": [
                  {
                    "translateX": 0,
                  },
                  {
                    "translateY": 0,
                  },
                ],
              }
            }
          >
            <View
              onLayout={[Function]}
              style={
                {
                  "alignItems": "center",
                  "aspectRatio": 1,
                  "height": "50%",
                  "justifyContent": "center",
                  "maxHeight": 24,
                  "minHeight": 8,
                  "opacity": 0,
                }
              }
              testID="badgenetwork"
            >
              <View
                style={
                  {
                    "alignItems": "center",
                    "backgroundColor": "#ffffff",
                    "borderColor": "#ffffff",
                    "borderRadius": 8,
                    "borderWidth": 2,
                    "height": 32,
                    "justifyContent": "center",
                    "overflow": "hidden",
                    "shadowColor": "#0000001a",
                    "shadowOffset": {
                      "height": 2,
                      "width": 0,
                    },
                    "shadowOpacity": 1,
                    "shadowRadius": 4,
                    "transform": [
                      {
                        "scale": 1,
                      },
                    ],
                    "width": 32,
                  }
                }
              >
                <Image
                  onError={[Function]}
                  resizeMode="contain"
                  source={1}
                  style={
                    {
                      "height": 32,
                      "width": 32,
                    }
                  }
                  testID="network-avatar-image"
                />
              </View>
            </View>
          </View>
        </View>
        <View
          style={
            {
              "alignContent": "flex-start",
              "alignItems": "flex-start",
              "flex": 1,
              "flexDirection": "column",
              "paddingLeft": 16,
            }
          }
        >
          <Text
            accessibilityRole="text"
            style={
              {
                "color": "#121314",
                "fontFamily": "Geist Regular",
                "fontSize": 16,
                "letterSpacing": 0,
                "lineHeight": 24,
              }
            }
          >
            Ethereum
          </Text>
          <Text
            accessibilityRole="text"
            style={
              {
                "color": "#686e7d",
                "fontFamily": "Geist Regular",
                "fontSize": 14,
                "fontWeight": "400",
                "letterSpacing": 0,
                "lineHeight": 22,
              }
            }
            testID="token-amount-balance-test-id"
          >
            400 ETH
          </Text>
        </View>
        <View
          style={
            {
              "alignItems": "flex-end",
              "flexShrink": 0,
            }
          }
        >
          <Text
            accessibilityRole="text"
            style={
              {
                "color": "#121314",
                "fontFamily": "Geist Medium",
                "fontSize": 16,
                "letterSpacing": 0,
                "lineHeight": 24,
              }
            }
            testID="balance-test-id"
          >
            1500
          </Text>
        </View>
      </TouchableOpacity>
    </View>
    <View
      style={
        {
          "marginBottom": 20,
          "paddingHorizontal": 16,
        }
      }
    >
      <View
        style={
          {
            "gap": 24,
            "marginTop": 24,
          }
        }
      >
        <View>
          <Text
            accessibilityRole="text"
            style={
              {
                "color": "#121314",
                "fontFamily": "Geist Bold",
                "fontSize": 18,
                "letterSpacing": 0,
                "lineHeight": 24,
                "paddingVertical": 8,
              }
            }
          >
            Token details
          </Text>
          <View
            style={
              {
                "paddingBottom": 8,
                "paddingTop": 8,
              }
            }
          >
            <View
              style={
                {
                  "flexDirection": "row",
                  "justifyContent": "space-between",
                  "paddingVertical": 4,
                }
              }
            >
              <Text
                accessibilityRole="text"
                style={
                  {
                    "color": "#686e7d",
                    "fontFamily": "Geist Medium",
                    "fontSize": 16,
                    "letterSpacing": 0,
                    "lineHeight": 24,
                  }
                }
              >
                Token decimal
              </Text>
              <Text
                accessibilityRole="text"
                style={
                  {
                    "color": "#121314",
                    "fontFamily": "Geist Regular",
                    "fontSize": 14,
                    "letterSpacing": 0,
                    "lineHeight": 22,
                  }
                }
              >
                18
              </Text>
            </View>
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;
